feat: add theme toggle with saved preference and bold link styling
- Add Theme button in header and persist choice in localStorage
- Implement light theme via CSS variables and .light-theme class
- Make all links bold for consistency
- Adjust todo item background for light theme
Files updated: index.html, styles.css, app.js

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <nav>
       <a href="#todos">Todos</a>
       <a href="#about">About</a>
+      <button id="theme-toggle" class="theme-toggle" aria-pressed="true" aria-label="Toggle dark or light theme">Theme</button>
     </nav>
   </header>
 
