Add todo categories/tags feature
- Users can now select a category (General, Work, Personal, Learning) when adding a new todo.
- Each todo displays its category next to the title in the list.
- Categories are saved and persist across page reloads.
- The feature improves organization and makes it easier to filter or group tasks in the future.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <nav>
       <a href="#todos">Todos</a>
       <a href="#about">About</a>
+      <button id="theme-toggle" class="theme-toggle" aria-pressed="true" aria-label="Toggle dark or light theme">Theme</button>
     </nav>
   </header>
 
@@ -23,6 +24,12 @@
         <label for="todo-input">Add a task</label>
         <div class="row">
           <input id="todo-input" name="title" placeholder="e.g. Read contributing guide" required>
+          <select id="todo-category" name="category">
+            <option value="General">General</option>
+            <option value="Work">Work</option>
+            <option value="Personal">Personal</option>
+            <option value="Learning">Learning</option>
+          </select>
           <button type="submit">Add</button>
         </div>
       </form>
